--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyStirixis</title>
+    <title>MyWebapp</title>
 
 </head>
 <body>
@@ -37,10 +37,10 @@
     </form>
     <h2> Στοιχεία Επικοινωνίας</h2>
     <div style="text-align: center; margin-bottom: 20px;">
-        <p><img src="map.png" height="18px" width="18px">Διεύθυνση:<a href="https://maps.app.goo.gl/LAeQ2HV7peZarTc36"> Ζαϊμη & Μαγνησίας 19, Πύργος Ηλείας, <br>Τ.Κ. 27 131 </p></a>
-        <p>Τηλ. <a href="tel:2621034449">2621034449</a> ☎️, <a href="tel:2621081191">2621081190</a> ☎️</p>
-        <p>Κεντρικό email: <a href="mailto:info@stirixisnet.gr">info@stirixisnet.gr</a> 📧</p>
-        <p>Κοινωνικά δίκτυα: <a href="https://www.facebook.com/StirixisNet" target="_blank">Facebook Page<img src="Facebooklogo.png" width="16px" height="16px"></a></p>
+        <p><img src="map.png" height="18px" width="18px">Street:<a href="https://maps.app.goo.gl/6"> street <br>Τ.Κ. 27 131 </p></a>
+        <p>Τηλ. <a href="tel:2</a> ☎️, <a href="tel:262">20</a> ☎️</p>
+        <p>Κεντρικό email: <a href="mailto:info@.gr">info@str.cok</a> 📧</p>
+        <p>Κοινωνικά δίκτυα: <a href="https://www.facebook.com/" target="_blank">Facebook Page<img src="Facebooklogo.png" width="16px" height="16px"></a></p>
     </div>
 
     <script>
