--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyStirixis</title>
+    <title>MyWebApp</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <br>
     <div class="logo-container">
         <a href="/index">
-            <img src="STIRIXIS.png" alt="Logo" class="logo">
+            <img src="STIS.png" alt="Logo" class="logo">
         </a>
     </div>
     <br>
