--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyStirixis</title>
+    <title>MyWebApp</title>
 </head>
 <style>
     .lamp-emoji {
@@ -35,13 +35,13 @@
     <br>
     <div class="logo-container">
         <a href="/index">
-            <img src="STIRIXIS.png" alt="Logo" class="logo">
+            <img src="WebApp.png" alt="Logo" class="logo">
         </a>
     </div>
     <br>
-    <h1 class="welcome-message">Καλώς ήρθατε στο MyStirixis app <%= vat %></h1>
+    <h1 class="welcome-message">Καλώς ήρθατε στο MyWebApp <%= vat %></h1>
     <div class="centered-text">
-        Η<b> ΣΤΗΡΙΞΙΣ  Α.Ε.</b> είναι μια αναπτυσσόμενη εταιρία που δραστηριοποιείται από το 1986 στους τομείς παροχής λογιστικών,<br>
+        Η<b> WebApp</b> είναι μια αναπτυσσόμενη εταιρία που δραστηριοποιείται από το 1986 στους τομείς παροχής λογιστικών,<br>
          φορολογικών και εργατικών υπηρεσιών και από το 2004 στους τομείς της πληροφορικής. Τα προϊόντα και τις υπηρεσίες<br> 
          μας εμπιστεύονται σήμερα πλήθος επαγγελματιών του ευρύτερου οικονομικού χώρου , όπως και ιδιώτες. Το βασικό συστατικό<br> 
          της επιτυχίας και ο πολυτιμότερος παράγοντας ανάπτυξης της εταιρίας μας είναι τόσο το ανθρώπινο δυναμικό μας όσο και <br>
