--- a/views/payroll.ejs
+++ b/views/payroll.ejs
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Μισθοδοσία Stirixis</title>
+    <title>Μισθοδοσία </title>
 </head>
 <body>
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
@@ -26,11 +26,11 @@
     <br>
     <div class="logo-container">
         <a href="/index">
-            <img src="STIRIXIS.png" alt="Logo" class="logo">
+            <img src="WebApp.png" alt="Logo" class="logo">
         </a>
     </div>
     <br>
-    <h2>MyStirixis Μισθοδοσία <%= vat %></h2>
+    <h2>Μισθοδοσία <%= vat %></h2>
     <div class="logo-container">
         <img src="/underconstruction.jpg" alt="logo" class="logo">
     </div>
