--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -22,7 +22,7 @@
     <br>
     <div class="logo-container">
         <a href="/index">
-            <img src="STIRIXIS.png" alt="Logo" class="logo">
+            <img src="WebApp.png" alt="Logo" class="logo">
         </a>
     </div>
     
