--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,11 +41,7 @@
     <br>
     <h1 class="welcome-message">Καλώς ήρθατε στο MyWebApp <%= vat %></h1>
     <div class="centered-text">
-        Η<b> WebApp</b> είναι μια αναπτυσσόμενη εταιρία που δραστηριοποιείται από το 1986 στους τομείς παροχής λογιστικών,<br>
-         φορολογικών και εργατικών υπηρεσιών και από το 2004 στους τομείς της πληροφορικής. Τα προϊόντα και τις υπηρεσίες<br> 
-         μας εμπιστεύονται σήμερα πλήθος επαγγελματιών του ευρύτερου οικονομικού χώρου , όπως και ιδιώτες. Το βασικό συστατικό<br> 
-         της επιτυχίας και ο πολυτιμότερος παράγοντας ανάπτυξης της εταιρίας μας είναι τόσο το ανθρώπινο δυναμικό μας όσο και <br>
-         η σχέση μας με τις συνεργαζόμενες επιχειρήσεις (πελάτες).
+        Η<b> WebApp</b> 
 
         </div>
         <div class="lamp-emoji">💡<br></div>
