--- a/views/payroll.ejs
+++ b/views/payroll.ejs
@@ -14,10 +14,10 @@
             <br>
             <br>
             <br>
-            <li><a href="/index">Αρχική</a></li>
-            <li><a href="/payroll">Μισθοδοσία</a></li>
-            <li><a href="/invoice">Παραστατικά</a></li>
-            <li><a href="/contact">Επικοινωνία</a></li>
+          <li><a href="/index">list1</a></li>
+            <li><a href="/payroll">list2</a></li>
+            <li><a href="/invoice">list3</a></li>
+            <li><a href="/contact">list4</a></li>
             <li><a href="/logout" class="logout-button">Logout</a></li>
         </ul>
     </div>
