--- a/views/payroll.ejs
+++ b/views/payroll.ejs
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Μισθοδοσία </title>
+    <title>test </title>
 </head>
 <body>
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
