--- a/views/payroll.ejs
+++ b/views/payroll.ejs
@@ -30,7 +30,7 @@
         </a>
     </div>
     <br>
-    <h2>Μισθοδοσία <%= vat %></h2>
+    <h2>test <%= vat %></h2>
     <div class="logo-container">
         <img src="/underconstruction.jpg" alt="logo" class="logo">
     </div>
