--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -26,7 +26,7 @@
         </a>
     </div>
     
-    <h2>Φόρμα Επικοινωνίας</h2>
+    <h2>Contact</h2>
    
     <form id="contactForm" action="/submit_contact" method="POST">
     <div class="form-group"><label for="message">Μήνυμα:</label></div>
@@ -35,12 +35,12 @@
         </div>
         <button type="submit">send mail</button>
     </form>
-    <h2> Στοιχεία Επικοινωνίας</h2>
+   
     <div style="text-align: center; margin-bottom: 20px;">
         <p><img src="map.png" height="18px" width="18px">Street:<a href="https://maps.app.goo.gl/6"> street <br>Τ.Κ. 27 131 </p></a>
-        <p>Τηλ. <a href="tel:2</a> ☎️, <a href="tel:262">20</a> ☎️</p>
-        <p>Κεντρικό email: <a href="mailto:info@.gr">info@str.cok</a> 📧</p>
-        <p>Κοινωνικά δίκτυα: <a href="https://www.facebook.com/" target="_blank">Facebook Page<img src="Facebooklogo.png" width="16px" height="16px"></a></p>
+        <p>tel. <a href="tel:</a> ☎️, <a href="tel:">20</a> ☎️</p>
+        <p>email: <a href="mailto:info@.gr">info@str.cok</a> 📧</p>
+        <p>social: <a href="https://www.facebook.com/" target="_blank">Facebook Page<img src="Facebooklogo.png" width="16px" height="16px"></a></p>
     </div>
 
 </body>
