--- a/views/invoice.ejs
+++ b/views/invoice.ejs
@@ -46,7 +46,7 @@
         <br><br>
         <button type="button" onclick="submitForm()">Αποστολή</button>
         <br>
-        <div id="errorMessage" style="display: none; color: red;">Επιλέξτε παραστατικά για να συνεχίσετε</div>
+        <div id="errorMessage" style="display: none; color: red;">choose files to upload</div>
         <br><br>
     </form>
     <!-- Modal for file previews -->
