--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -29,7 +29,7 @@
     <h2>Contact</h2>
    
     <form id="contactForm" action="/submit_contact" method="POST">
-    <div class="form-group"><label for="message">Μήνυμα:</label></div>
+    <div class="form-group"><label for="message">Message</label></div>
         <div class="form-group">
             <textarea id="message" name="message" rows="9" required cols="35"></textarea>
         </div>
