--- a/CSS/files.css
+++ b/CSS/files.css
@@ -1,1 +1,438 @@
-sdadsa
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    overflow: auto; 
+    height: 100vh;
+    background-color: #ccc;
+    background-image: url('/background1.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: repeat; 
+    background-attachment: fixed; 
+}
+
+@media (max-width: 768px) {
+    body {
+        background-attachment: fixed; 
+        background-size: cover; 
+    }
+}
+@media (max-width: 480px) {
+    body {
+        background-position: top center; 
+    }
+}
+
+
+
+h1 {
+    text-align: center;
+}
+
+.logo-container {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.logo {
+    max-width: 350px;
+    transition: transform 0.3s ease;
+}
+
+.logo:hover {
+    transform: scale(1.05);
+}
+
+h2 {
+    font-size: 20px;
+    color: #262075;
+    text-align: center;
+}
+
+button {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 10px 0;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
+
+
+.logout-button {
+    position: absolute;
+    font-size: 16px;
+    color: #fff;
+    background-color: #007bff;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.logout-button:hover {
+    background-color: #0056b3;
+}
+
+
+.menu-toggle {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 1000;
+}
+
+.menu {
+    position: fixed;
+    top: 0;
+    left: -200px; 
+    width: 200px;
+    height: 100%;
+    background-color: #333;
+    transition: left 0.3s ease;
+    z-index: 100;
+}
+
+.menu.open {
+    left: 0;
+}
+
+.menu ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.menu ul li {
+    padding: 10px 0;
+}
+
+.menu ul li a {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 20px;
+}
+
+.menu ul li a:hover {
+    background-color: #555;
+}
+
+
+.page-container {
+    flex-grow: 1;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: calc(100vh); 
+    overflow-x: hidden;
+    box-sizing: border-box;
+}
+
+
+.file-container {
+    width: 100%;
+    max-width: 1200px;
+    flex-grow: 1;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
+}
+
+
+.file-grid {
+    flex-grow: 1;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    gap: 15px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+
+.file-details {
+    flex-grow: 1;
+    display: none;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    width: 100%-10px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+
+.file-item {
+    background-color: #fafafa;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    text-align: center;
+    cursor: pointer;
+    transition: box-shadow 0.3s ease, transform 0.3s ease;
+}
+
+.file-item:hover {
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    transform: translateY(-3px);
+}
+
+.file-icon {
+    font-size: 40px;
+    color: #007bff;
+    margin-bottom: 10px;
+}
+
+.file-name {
+    font-size: 16px;
+    font-weight: bold;
+    word-break: break-all;
+}
+
+.download-container {
+    margin-top: 10px;
+    font-size: 14px;
+}
+
+.download-link {
+    text-decoration: none;
+    color: #007bff;
+}
+
+.download-link:hover {
+    color: #0056b3;
+}
+
+
+.file-details table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.file-details th,
+.file-details td {
+    text-align: center;
+    padding: 12px;
+    border-bottom: 1px solid #ddd;
+}
+
+.file-details th {
+    background-color: #f7f7f7;
+    font-weight: bold;
+}
+
+.file-details tbody tr:hover {
+    background-color: #f0f0f0;
+}
+
+.file-details th:nth-child(1),
+.file-details td:nth-child(1) {
+    width: 60%;
+}
+
+.file-details th:nth-child(2),
+.file-details td:nth-child(2) {
+    width: 25%;
+}
+
+.file-details th:nth-child(3),
+.file-details td:nth-child(3) {
+    width: 15%;
+}
+
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0; 
+    top: 0; 
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5); 
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.modal.show {
+    opacity: 1;
+    display: flex;
+}
+
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 90vw; 
+    max-height: 90vh; 
+    overflow-y: auto;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); 
+}
+
+
+.modal-close {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 30px;
+    color: white;
+    cursor: pointer;
+}
+
+.modal iframe,
+.modal img,
+.modal video,
+.modal audio,
+.modal pre {
+    width: 100%;
+    max-height: 60vh;
+}
+
+.loading-spinner {
+    border: 4px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 4px solid #3498db;
+    width: 40px;
+    height: 40px;
+    animation: spin 2s linear infinite;
+    position: fixed; 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none; 
+    z-index: 1100; 
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+
+@media (max-width: 600px) {
+    .file-grid {
+        grid-template-columns: repeat(1, 1fr);
+    
+    }
+
+    .file-item {
+        padding: 10px;
+        font-size: 12px;
+    }
+
+    .file-icon {
+        font-size: 25px;
+    }
+
+    button {
+        font-size: 12px;
+    }
+
+    .modal-content {
+        max-width: 95%;
+        max-height: 90%;
+        padding: 15px;
+    }
+
+    
+    .view-toggle {
+        display: none;
+    }
+
+    
+    .file-grid {
+        display: grid !important;
+    }
+
+    
+    .file-details {
+        display: none !important;
+    }
+}
+
+#bottom-icon-container {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    z-index: 1000;
+}
+
+#bottom-icon-container img {
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    transition: transform 0.2s;
+}
+
+th {
+    cursor: pointer; 
+    position: relative; 
+}
+
+.sort-arrow {
+    display: inline-block;
+    margin-left: 5px;
+    font-size: 12px;
+    opacity: 0; 
+    transition: opacity 0.2s ease-in-out;
+}
+
+th:hover .sort-arrow {
+    opacity: 0.5; 
+}
+
+th.sorted .sort-arrow {
+    opacity: 1; 
+}
+
+th.sorted.asc .sort-arrow::before {
+    content: "▲"; 
+}
+
+th.sorted.desc .sort-arrow::before {
+    content: "▼"; 
+}
+
+.preview-pdf {
+    height: 60vh; 
+}
+
+
+
+.preview-pdf {
+width: 100%; 
+height: 85vh; 
+border: none; 
+}
+
+#pdfCanvas {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    border: 1px solid #ccc;
+}
