--- a/views/fmy.ejs
+++ b/views/fmy.ejs
@@ -6,7 +6,7 @@
 <title>PROJECT1</title>
 <meta name="description" content="View and manage files in MyFiles">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/css/files.css">
+    <link rel="stylesheet" href="/CSS/files.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mammoth/1.4.2/mammoth.browser.min.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js" defer></script>
