--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/CSS/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyWebApp</title>
 </head>
-<style>
-    .lamp-emoji {
-            font-size: 48px; /* Adjust size as needed */
-            display: block;
-            text-align: center; /* Center the emoji */
-        }
-        .emoji-container {
-            font-size: 48px; /* Adjust size as needed */
-            text-align: center;
-        }
-</style>
 <body>
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     <div class="menu">
