--- a/views/afm.ejs
+++ b/views/afm.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>myStirixis</title>
+    <title>PROJECT1</title>
     <meta name="description" content="files">
     
     <link rel="icon" href="favicon.ico" type="image/x-icon">
