--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="/CSS/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyWebApp</title>
+    <title>PROJECT1</title>
 </head>
 <body>
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
