--- a/views/invoice.ejs
+++ b/views/invoice.ejs
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="/CSS/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Αποστολή Παραστατικών</title>
+    <title>SEND FILES TO ONEDRIVE FOLDER</title>
     <script async src="https://docs.opencv.org/master/opencv.js"></script>
 </head>
 <body>
